--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -84,10 +84,12 @@
   h3 {
     font-weight: 600;
     color: #9f9f9f;
+    text-transform: uppercase;
   }
 
   span {
     color: #f71963;
+    font-weight: 600;
   }
 }
 
