--- a/src/pages/OfertasDoDia/styles.module.scss
+++ b/src/pages/OfertasDoDia/styles.module.scss
@@ -1,10 +1,14 @@
 .banner {
   position: relative;
+  
+  img{
+    width: -webkit-fill-available
+  }
 }
 
 .banner_details {
   position: absolute;
-  top: 49px;
+  top: 41px;
   left: 89px;
   width: 57%;
 
@@ -29,5 +33,56 @@
     font-size: 18px;
     margin-top: 35px;
 
+  }
+}
+
+.container_produtos{
+  display: flex;
+  justify-content: center;
+}
+
+.produtos_relacionados{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 88%;
+
+  h2{
+    font-size: 30px;
+    font-weight: 700;
+    color: #F71963;
+    margin-right: 34px;
+    margin-left: 34px;
+
+  }
+}
+
+.line{
+  border: 1px solid #DEDEDE;
+  width: 28%;
+}
+
+.body_categoria{
+  display: flex;
+  justify-content: center;
+}
+
+.container_categoria__produtos{
+  width: 88%;
+  display: flex;
+  height: 40px;
+
+  div{
+    width: 16.6%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    color: #BDBDBD;
+    border: 1px solid #BDBDBD
+  }
+
+  span{
+    color: #F71963;
   }
 }
