--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -2,10 +2,13 @@
   background-color: #2a2a2a;
   display: flex;
   justify-content: center;
+  margin-top: 169px;
 }
 
 .container_footer {
   width: 88%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .info {
@@ -52,4 +55,60 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 18px;
+}
+
+.cadastre {
+  width: 31%;
+  height: 260px;
+  background: #ffffff;
+  border-radius: 10px;
+  margin-top: 33px;
+  margin-bottom: 32px;
+
+  h5 {
+    font-size: 18px;
+    margin-left: 29px;
+    margin-top: 40px;
+    font-weight: 300;
+    margin-bottom: 7px;
+  }
+
+  h2 {
+    font-size: 18px;
+    margin-left: 29px;
+    margin-top: unset;
+  }
+}
+
+.paragrafo {
+  width: 88%;
+  margin-left: 29px;
+  margin-bottom: 41px;
+
+  p {
+    font-size: 12px;
+  }
+}
+
+.button__ok {
+  width: 88%;
+  margin-left: 29px;
+
+  input {
+    height: 45px;
+    border: 1px solid #2a2a2a;
+    border-radius: 4px;
+    padding: 0px 0 0px 12px;
+    outline: none;
+    margin-right: 12pxF
+  }
+
+  button{
+    height: 45px;
+    width: 62px;
+    background: #F71963;
+    border-radius: 4px;
+    border: unset;
+    color: white;
+  }
 }
